--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/WhiteStar.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/WhiteStar.svg" sizes="96x96" />
+    <link rel="shortcut icon" href="/src/assets/WhiteStar.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/WhiteStar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke Picker</title>
   </head>
